# notepadl

./: settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/androidTest/java/com/example/notepadl/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  aes.c  com_example_notepadl_NativeCryptoUtil.h  com_example_notepadl_utils_NativeCryptoUtil.h
app/src/main/java/com/example/notepadl/: BiometricUtil.java  Common.java  Crypto.java  CryptoUtil.java  DisplayNote.java  DisplayNoteActivity.java  FridaDetectorUtil.java  KeyGeneratorUtil.java  KeyStoreUtil.java  MainActivity.java  NativeCryptoUtil.java  RootDetectorUtil.java  SharedActivity.java  SharedPrefsUtil.java
app/src/main/java/com/example/notepadl/model/: AesKeySpec.java
app/src/main/java/com/example/notepadl/utils/: BiometricUtil.java  CryptoUtil.java  FridaDetectorUtil.java  KeyGeneratorUtil.java  KeyStoreUtil.java  NativeCryptoUtil.java  RootDetectorUtil.java  SharedPrefsUtil.java
app/src/main/res/layout/: activity_display_note.xml  activity_main.xml  dialog_custom.xml
app/src/main/res/menu/: main_menu.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/notepadl/: ExampleUnitTest.java  NativeCryptoUtilTest.java
gradle/wrapper/: gradle-wrapper.properties
